# pitts

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.reuse/: dep5
bench/: amd_ttpy_amen.sh  amd_ttpy_amen_precond.sh  numpy_gemm_bench.py  numpy_qr_bench.py  numpy_qr_bench_row_major.py  numpy_svd_bench.py  numpy_tt_op_dense_bench.py  opt_einsum_tt_op_dense_bench.py  scikit_tt_mals.py  torch_gemm_bench.py  torch_qr_bench.py  torch_svd_bench.py  torch_tt_op_dense_bench.py  tt_from_dense_TensorToolbox.py  tt_from_dense_dgesdd.py  tt_from_dense_t3f.py  tt_from_dense_tntorch.py  tt_from_dense_ttpy.py  ttpy_amen.py  ttpy_amen.sh  ttpy_amen_precond.sh
bench/compile/: build.sh  build_clang.sh  build_clang_ccache.sh  build_clang_devbuild.sh  build_gcc.sh  build_gcc_ccache.sh  build_gcc_devbuild.sh  build_modules.sh
bench/sc-cluster/: memory_bandwidth.sh  numpy_gemm_single_socket.sh  numpy_gemm_single_socket_padding.sh  numpy_qr_single_socket.sh  numpy_qr_single_socket_row_major.sh  numpy_svd_single_socket.sh  peak_flops.sh  plasma_qr_single_socket.sh  plasma_qr_single_socket.sh-5825.out  trilinos_tsqr_single_socket.sh  trilinos_tsqr_single_socket.sh-5826.out  tsmm_single_socket.sh  tsmm_single_socket_large.sh  tsmm_single_socket_padding.sh  tsmm_single_socket_saturation.sh  tsmm_single_socket_small.sh  tsqr_parameter_tuning.sh  tsqr_single_socket.sh  tsqr_single_socket_complex.sh  tsqr_single_socket_complex_single.sh  tsqr_single_socket_large.sh  tsqr_single_socket_saturation.sh  tsqr_single_socket_single.sh  tsqr_single_socket_small.sh  tsqr_single_socket_small_likwid.sh  tsqr_single_socket_small_likwid.sh-5908.out  tsqr_single_socket_wide.sh  tt_from_dense_10_9_single_socket.sh  tt_from_dense_TensorToolbox.sh  tt_from_dense_classical.sh  tt_from_dense_dgesdd.sh  tt_from_dense_single_socket.sh  tt_from_dense_single_socket_extract_data_per_function.sh  tt_from_dense_single_socket_likwid.sh  tt_from_dense_single_socket_small.sh  tt_from_dense_single_socket_small_thickbounds.sh  tt_from_dense_t3f.sh  tt_from_dense_t3f.sh-5785.out  tt_from_dense_thickbounds3_single_socket.sh  tt_from_dense_thickbounds_single_node.sh  (+7 more)
bench/sc-cluster/scaling/: tt_from_dense_thickbounds_d29_N1_n1.sh  tt_from_dense_thickbounds_d30_N1_n1.sh  tt_from_dense_thickbounds_d30_N1_n2.sh  tt_from_dense_thickbounds_d31_N1_n1.sh  tt_from_dense_thickbounds_d31_N1_n2.sh  tt_from_dense_thickbounds_d31_N1_n4.sh  tt_from_dense_thickbounds_d32_N1_n1.sh  tt_from_dense_thickbounds_d32_N1_n2.sh  tt_from_dense_thickbounds_d32_N1_n4.sh  tt_from_dense_thickbounds_d32_N2_n8.sh  tt_from_dense_thickbounds_d33_N1_n2.sh  tt_from_dense_thickbounds_d33_N1_n4.sh  tt_from_dense_thickbounds_d33_N2_n8.sh  tt_from_dense_thickbounds_d33_N4_n16.sh  tt_from_dense_thickbounds_d34_N1_n4.sh  tt_from_dense_thickbounds_d34_N2_n8.sh  tt_from_dense_thickbounds_d34_N4_n16.sh  tt_from_dense_thickbounds_d35_N2_n8.sh  tt_from_dense_thickbounds_d35_N4_n16.sh  tt_from_dense_thickbounds_d36_N4_n16.sh  tt_from_dense_thickbounds_extract_data.sh
bench/sc-cluster/scaling2/: tt_from_dense_thickbounds_d32_strong_n1.sh  tt_from_dense_thickbounds_d32_strong_n10.sh  (+47 more)
bench/trilinos/: CMakeLists.txt  tsqr.cpp
cmake/: CXX20Modules.cmake  CodeCoverage.cmake  FindITensor.cmake  FindLIKWID.cmake  GTest.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  OptParse.cmake  prepare_gcovr.sh
examples/: analyze_tt.py  big_data_tt.py  spectral_clustering.py  truncated_square_svd_approximation.py  tsqr_bench.py  tt_arnoldi.py  tt_convection_operator.py  tt_gmres.py  tt_gmres_pivmgs.py  tt_gmres_pivmgs_leftprecond.py  tt_gmres_pivmgs_rightprecond.py  tt_gmres_pivmgs_smaller_eps.py  tt_jacobi_davidson.py  tt_laplace_operator.py  tt_pivmgs.py  tt_powers.py  tt_rank1_preconditioner.py  tt_solve_gmres.py  tt_solve_mals.py  tt_ssor_preconditioner.py
src/: CMakeLists.txt  PittsJl.jl  apply_op_bench.cpp  apply_op_dense_bench.cpp  axpby_bench.cpp  axpby_left_ortho_bench.cpp  axpby_right_ortho_bench.cpp  cdist2_bench.cpp  centroids_bench.cpp  cg_bench.cpp  dot_bench.cpp  dummy.cpp  gemm_bench.cpp  kmeans_bench.cpp  multivector_axpy_bench.cpp  multivector_copy_bench.cpp  norm2_bench.cpp  normalize_bench.cpp  normalize_qb_bench.cpp  pitts_chunk.cppm  pitts_chunk.hpp  pitts_chunk_ops.cppm  pitts_chunk_ops.hpp  pitts_chunk_ops_avx2.hpp  pitts_chunk_ops_avx512.hpp  pitts_chunk_ops_plain.hpp  pitts_common.cpp  pitts_common.cppm  pitts_common.hpp  pitts_common_impl.cpp  pitts_common_impl.hpp  pitts_common_jlbind.cpp  pitts_common_jlbind.hpp  pitts_common_pybind.cpp  pitts_common_pybind.hpp  pitts_eigen.hpp  pitts_fixed_tensor3.cppm  pitts_fixed_tensor3.hpp  pitts_fixed_tensor3_apply.cppm  pitts_fixed_tensor3_apply.hpp  (+304 more)
test/: CMakeLists.txt  eigen_test_helper.hpp  test_chunk.cpp  test_chunk_ops.cpp  test_chunk_ops.hpp  test_chunk_ops_avx2.cpp  test_chunk_ops_avx512.cpp  test_chunk_ops_plain.cpp  test_common_jlbind.jl  test_common_pybind.py  test_complex_helper.hpp  test_fixed_tensor3.cpp  test_fixed_tensor3_apply.cpp  test_fixed_tensor3_combine.cpp  test_fixed_tensor3_random.cpp  test_fixed_tensor3_split.cpp  test_fixed_tensortrain.cpp  test_fixed_tensortrain_axpby.cpp  test_fixed_tensortrain_dot.cpp  test_fixed_tensortrain_random.cpp  test_gmres.cpp  test_hash_function.cpp  test_kernel_info.cpp  test_multivector.cpp  test_multivector_axpby.cpp  test_multivector_cdist.cpp  test_multivector_centroids.cpp  test_multivector_dot.cpp  test_multivector_eigen_adaptor.cpp  test_multivector_gramian.cpp  test_multivector_jlbind.jl  test_multivector_norm.cpp  test_multivector_pybind.py  test_multivector_random.cpp  test_multivector_reshape.cpp  test_multivector_scale.cpp  test_multivector_transform.cpp  test_multivector_transpose.cpp  test_multivector_triangular_solve.cpp  test_multivector_tsqr.cpp  (+57 more)
test/itensor/: CMakeLists.txt  test_tensortrain_from_itensor.cpp  test_tensortrain_operator_from_itensor.cpp  test_tensortrain_operator_itensor_autompo_pybind.py  test_tensortrain_operator_to_itensor.cpp  test_tensortrain_to_itensor.cpp
(+351 files in other folders)
